# spew

./: .gitignore  Makefile.am  README.rst  WIP  configure.ac
include/: Makefile.am  core.h  http.h  inform.h  param-private.h  param.h
misc/: indent
src/: Makefile.am  arg.c  config.c  data_writers.c  http.c  param.c
src/util/: arg.c  config.c  generate_structs.tcl  inform.c  main.c  param.c
